fix weird category card issue width on mobile css cleanup

--- a/src/library-main/_library-main.scss
+++ b/src/library-main/_library-main.scss
@@ -7,13 +7,7 @@
     // all of this bc of the filter menu pushing in vs sliding on top
     display: grid;
     grid-template-columns: 35% auto;
-
-    &__category {
-      grid-template-rows: 48px auto;
-    }
-    &__project {
-      grid-template-rows: auto auto;
-    }
+    grid-template-rows: auto auto;
   
     .filter-menu-container {
       grid-column: 1 / 3;
